Fix spacing issue on icon links in production

--- a/assets/scss/_grpc.scss
+++ b/assets/scss/_grpc.scss
@@ -189,6 +189,10 @@ c - Component (Aware of its content/context...)
   }
 }
 
+.o-icon {
+  margin-right: 0.25rem;
+}
+
 .o-logo {
   width: 80%;
 }
